nouvelle fonctionnalité - ajout d'une candidature terminée

--- a/dashboard_backend/backend/templates/candidature/index.html.twig
+++ b/dashboard_backend/backend/templates/candidature/index.html.twig
@@ -12,7 +12,7 @@
                 <th>Entreprise</th>
                 <th>Poste</th>
                 <th>Statut</th>
-                <th>Lien_offre</th>
+                <th>LienOffre</th>
                 <th>Adresse</th>
                 <th>Notes</th>
                 <th>Date</th>
