--- a/dashboard_backend/backend/templates/candidature/show.html.twig
+++ b/dashboard_backend/backend/templates/candidature/show.html.twig
@@ -24,7 +24,7 @@
                 <td>{{ candidature.statut }}</td>
             </tr>
             <tr>
-                <th>Lien_offre</th>
+                <th>LienOffre</th>
                 <td>{{ candidature.lienOffre }}</td>
             </tr>
             <tr>
