--- a/dashboard_frontend/frontend/src/components/candidatures/details/CandidatureDetaillee.css
+++ b/dashboard_frontend/frontend/src/components/candidatures/details/CandidatureDetaillee.css
@@ -1,14 +1,35 @@
+.page {
+    padding: 40px 20px;
+    max-width: 1400px;
+    margin: 0 auto;
+}
 .candidature {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    flex-direction: column;
+    gap: 24px;
+    padding: 32px;
+    border: 1px solid #e0e0e0;
+    border-radius: 20px;
+    background-color: #fafafa;
+    margin-top: 20px;
+    min-height: 600px;
 }
 
-.logo-entreprise img {
-    max-height: 150px;
-    max-width: 150px;
-}
-
-.notes textarea {
+.notes-details textarea {
     resize: none;
+    min-width: 600px;
+    min-height: 300px;
+}
+
+.bas {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-grow: 1;
+}
+
+.btn-modif-details {
+    display: flex;
+    margin: 20px;
+    justify-content: end;
 }
