--- a/dashboard_frontend/frontend/src/components/candidatures/liste/CandidaturePourLaListe.css
+++ b/dashboard_frontend/frontend/src/components/candidatures/liste/CandidaturePourLaListe.css
@@ -1,10 +1,54 @@
-.candidature-simplifiee {
+.statut {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
+    align-items: center;
+    justify-content: start;
+    border-radius: 999px;
+    overflow: hidden;
+    font-size: 13px;
+    font-weight: 500;
+    padding: 0px 0px;
+    max-width: 130px;
 }
 
-.logo-entreprise img {
-    max-height: 150px;
-    max-width: 150px;
+.statut.entretien, .point.entretien {
+    background-color: #e0f7f0;
+    color: #007a5e;
+    fill: #007a5e;
+}
+
+.statut.refusée, .point.refusée {
+    background-color: #fdeaea;
+    color: #d32f2f;
+    fill: #d32f2f;
+}
+
+.statut.acceptée, .point.acceptée {
+    background-color: #eafaf1;
+    color: #2e7d32;
+    fill: #2e7d32;
+}
+
+.statut.à-postuler, .point.à-postuler {
+    background-color: #fff8e1;
+    color: #f9a825;
+    fill: #f9a825;
+}
+
+.statut.envoyée, .point.envoyée {
+    background-color: #e3f2fd;
+    color: #1976d2;
+    fill: #1976d2;
+}
+
+.statut.sans-réponse, .point.sans-réponse {
+    background-color: #f5f5f5; 
+    color: #888888;
+    fill: #888888;
+}
+
+.point {
+    margin: 0px;
+    padding: 0px;
+    width: 36px;
+    height: 36px;
 }
