--- a/dashboard_frontend/frontend/src/components/candidatures/details/CandidatureDetaillee.css
+++ b/dashboard_frontend/frontend/src/components/candidatures/details/CandidatureDetaillee.css
@@ -3,6 +3,7 @@
     max-width: 1400px;
     margin: 0 auto;
 }
+
 .candidature {
     display: flex;
     flex-direction: column;
@@ -15,10 +16,19 @@
     min-height: 600px;
 }
 
+.notes-details {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .notes-details textarea {
     resize: none;
-    min-width: 600px;
-    min-height: 300px;
+    width: 100%;
+    min-height: 200px;
+    max-width: 700px;
+    box-sizing: border-box;
+    margin: 0 auto;
 }
 
 .bas {
@@ -32,4 +42,21 @@
     display: flex;
     margin: 20px;
     justify-content: end;
+}
+
+@media screen and (max-width: 768px) {
+    .notes-details textarea {
+        min-width: 100%;
+        min-height: 200px;
+    }
+
+    .bas {
+        flex-direction: column;
+        align-items: stretch;
+    }
+
+    .date {
+        text-align: center;
+        margin-bottom: 12px;
+    }
 }
